improve(venue-detail): link to menu

--- a/templates/view.venuedetail.html
+++ b/templates/view.venuedetail.html
@@ -16,7 +16,7 @@
 
 	<section class="lunch-venue-reception">
 		<div class="lunch-venue-interaction">
-			<a class="lunch-fn-menu">
+			<a class="lunch-fn-menu" href="{{venue.url}}" target="_blank">
 				<span class="lunch-icon">M</span>
 				<span class="lunch-label">View Menu</span>
 			</a>
