--- a/templates/view.venuedetail.html
+++ b/templates/view.venuedetail.html
@@ -59,7 +59,7 @@
 		<div class="lunch-comment lunch-animate" ng-repeat="comment in comments">
 			<div class="lunch-comment-info">
 				<div class="lunch-commentator-img" ng-class="{'lunch-owner':comment.owner}">
-					<img src="{{comment.user.ava}}" alt="">
+					<img ng-src="{{comment.user.ava}}" alt="">
 				</div>
 				<time am-time-ago="comment.date"></time>
 				<h3>{{comment.user.nick}}</h3>
