feat(promobox): first commit

--- a/templates/page.login.html
+++ b/templates/page.login.html
@@ -28,10 +28,23 @@
 			<h1>Lunchpad.co</h1>
 		</header>
 
-
+		<!--
 		<section class="lunch-section-manifesto">
 			<h2><a href="/manifesto" title="Manifesto">The Lunch Manifesto.</a></h2>
 			<p><a href="/manifesto" title="Manifesto">Read more.</a></p>
+		</section>
+		-->
+
+		<section class="lunch-section-itempromobox">
+			<div class="lunch-itempromobox-cont">
+				<div class="lunch-itempromobox-img">
+					<img src="http://lunchpad.co/static/img/itempromobox/lightsaber-ad.png" alt="lightsaber" />
+				</div>
+				
+
+				<h2>It takes strength to&nbsp;resist the dark side.</h2>
+				<p>The first to choose a venue you must be – to&nbsp;become a&nbsp;yedi.</p>
+			</div>
 		</section>
 
 		<section class="lunch-section-login">
