--- a/dev/sass/app.scss
+++ b/dev/sass/app.scss
@@ -34,6 +34,7 @@
 @import "tmpl.venue";
 @import "tmpl.flash";
 @import "tmpl.comment";
+@import "tmpl.itempromobox";
 
 // Pages
 @import "page.app";
@@ -46,6 +47,7 @@
 @import "view.venue";
 @import "view.venueedit";
 @import "view.admin";
+
 
 
 
