--- a/templates/page.login.html
+++ b/templates/page.login.html
@@ -43,7 +43,7 @@
 				
 
 				<h2>It takes strength to&nbsp;resist the dark side.</h2>
-				<p>The first to choose a venue you must be – to&nbsp;become a&nbsp;yedi.</p>
+				<p>The first to choose a venue you must be – to&nbsp;become a&nbsp;Jedi.</p>
 			</div>
 		</section>
 
