improve(wording) landingpage

--- a/templates/page.login.html
+++ b/templates/page.login.html
@@ -42,8 +42,8 @@
 				</div>
 				
 
-				<h2>It takes strength to&nbsp;resist the dark side.</h2>
-				<p>The first to choose a venue you must be – to&nbsp;become a&nbsp;Jedi.</p>
+				<h2>It takes strength to&nbsp;resist the dark&nbsp;side.</h2>
+				<p>To control the force an empty venue you must choose – only the best will become a Jedi on February&nbsp;14th.</p>
 			</div>
 		</section>
 
