improve(promo): deleted legacy html

--- a/templates/page.login.html
+++ b/templates/page.login.html
@@ -33,14 +33,7 @@
 			<h1>Lunchpad.co</h1>
 		</header>
 
-		<!--
-		<section class="lunch-section-manifesto">
-			<h2><a href="/manifesto" title="Manifesto">The Lunch Manifesto.</a></h2>
-			<p><a href="/manifesto" title="Manifesto">Read more.</a></p>
-		</section>
-		-->
-
-		<section lp-promo="./static/promo/tmpl.lightsaber.html"></section>
+		<section lp-promo="./static/promo/tmpl.manifesto.html"></section>
 
 		<section class="lunch-section-login">
 			<form action="/auth/login" method="post" class="lunch-login-form">
