feat(onboarding): moved code to module
needs testing. should be published in seperate repro.

--- a/templates/page.app.angular.html
+++ b/templates/page.app.angular.html
@@ -25,7 +25,7 @@
 		<script type="text/javascript" src="../static/js/app.js"></script>
 	</head>
 
-	<body ng-app="lunchpad" class="lunch-page-app">
+	<body ng-app="lunchpad" class="lunch-page-app" mr-shepherd>
 
 		<!-- Header -->
 		<header class="lunch-header">
