improve(notis): wording

--- a/templates/view.settings.html
+++ b/templates/view.settings.html
@@ -51,19 +51,19 @@
 			<input type="checkbox" name="lunch-overview" id="lunch-overview"
 				ng-change="submitNotifications()"
 				ng-model="data.user.noti.overv">
-			<label for="lunch-overview">Send me an overview about what venues my collegues chose</label>
+			<label for="lunch-overview">Notify me about new checkins!</label>
 		</p>
 		<p>
 			<input type="checkbox" name="lunch-remind" id="lunch-remind"
 				ng-change="submitNotifications()"
 				ng-model="data.user.noti.remind">
-			<label for="lunch-remind">Remind me when to choose a venue</label>
+			<label for="lunch-remind">Send me a daily reminder!</label>
 		</p>
 		<p>
 			<input type="checkbox" name="lunch-cmts" id="lunch-cmts"
 				ng-change="submitNotifications()"
 				ng-model="data.user.noti.cmts">
-			<label for="lunch-cmts">Notify me about new comments my venue and the venues I commented on</label>
+			<label for="lunch-cmts">Notify me about new comments! We will only notify you about comments relevant to you.</label>
 		</p>
 	</section>
 
