--- a/templates/view.settings.html
+++ b/templates/view.settings.html
@@ -45,7 +45,7 @@
 		</div>
 	</section>
 
-	<section>
+	<section class="lunch-email-preferences">
 		<h2>Notification Settings</h2>
 		<p>
 			<input type="checkbox" name="lunch-overview" id="lunch-overview"
