--- a/templates/page.login.html
+++ b/templates/page.login.html
@@ -13,7 +13,7 @@
 		<!-- Style -->
 		<link rel="stylesheet" href="../static/css/app.css">
 		<link rel="icon" href="../static/img/favicon.ico" type="image/x-icon"/>
-		
+
 		<!-- Type kit -->
 		<script type="text/javascript" src="//use.typekit.net/tjo7bse.js"></script>
 		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
@@ -22,10 +22,10 @@
 		<script type="text/javascript" src="./socket.io/socket.io.js"></script>
 		<script type="text/javascript" src="../static/js/libraries.js"></script>
 		<script type="text/javascript" src="../static/js/app.js"></script>
-		
+
 	</head>
 	<body class="lunch-page-login">
-	
+
 		<header>
 			<div  href="#" class="lunch-logo">
 				<img src="../static/img/logo-lp.png" alt="">
@@ -33,7 +33,7 @@
 			<h1>Lunchpad.co</h1>
 		</header>
 
-		<section lp-promo="manifesto"></section>
+		<section lp-promo="buzzfeed"></section>
 
 		<section class="lunch-section-login">
 			<form action="/auth/login" method="post" class="lunch-login-form">
@@ -54,11 +54,11 @@
 				<fieldset>
 					<button type="submit" class="lunch-button">Login</button>
 				</fieldset>
-				
 
-				
-				
-				
+
+
+
+
 			</form>
 		</section>
 
