fix(promo): wording and margin

--- a/static/promo/buzzfeed/style.page.css
+++ b/static/promo/buzzfeed/style.page.css
@@ -46,7 +46,7 @@
 	margin: 0.5em 0;
 }
 
-.lunch-section-buzzfeed footer {
+.lunch-page-buzzfeed .lunch-section-buzzfeed footer {
 	height: auto;
 	margin: 2em 0;
 }
